# ofxGgml

./: .clang-tidy  .cppcheck-suppressions  .gitignore  CHANGELOG.md  CITATION_IMPROVEMENTS.md  CONTRIBUTING.md  DEEP_REVIEW_FINDINGS.md  OPTIMIZATION_SUMMARY.md  PROMPT_SIZE_FIX.md  README.md  SECURITY_NOTES.md  addon_config.mk  clang-tidy-report.txt  cppcheck-report.txt  ofxGgml.props  test_integration.cpp
.ci/static-analysis-baselines/: README.md  clang-tidy-findings.txt  cppcheck-findings.txt
.github/workflows/: ci.yml
docs/: API_BACKEND_BOUNDARIES.md  API_STABILITY.md  ARCHITECTURE.md  ARCHITECTURE_IMPROVEMENTS.md  BATCH_INFERENCE.md  CHANGELOG.md  CLANG_TIDY.md  COMPANIONS.md  COMPATIBILITY.md  CORE_CONTRACT.md  DEEP_REVIEW_SUMMARY.md  EDL_EXPORT.md  ENHANCEMENT_SUMMARY.md  EXAMPLES.md  FEATURE_SYNERGIES.md  IMPLEMENTED_IDEAS_TUTORIAL.md  IMPROVEMENTS_IMPLEMENTED.md  IMPROVEMENTS_ROADMAP.md  NVIGI.md  OFXGGML_STABLEDIFFUSION_INTEGRATION.md  OFXIMGUI_ASSISTANT_SPEC.md  PERFORMANCE.md  PHASE1_COMPLETION_SUMMARY.md  QUICKSTART.md  QUICK_WINS.md  README.md  REBUILD_FROM_SCRATCH.md  RELEASE_NOTES.md  RELEASE_READINESS.md  ROADMAP.md  ROADMAP_IMPLEMENTATION_NOTES.md  ROADMAP_PROGRESS_REPORT.md  SEGMENTATION.md  SUBTITLE_FUNCTIONALITY.md  VIDEO_TUTORIAL_PLAN.md  models.md
docs/features/: ASSISTANTS.md  MODALITIES.md  WORKFLOWS.md
docs/getting-started/: BASIC_INFERENCE.md  CHOOSING_FEATURES.md  QUICKSTART.md
example-basic/: Makefile
example-basic/src/: ofApp.cpp
example-gui/: Makefile
example-gui/src/: ofApp.cpp
example-neural/: Makefile
example-neural/src/: main.cpp  ofApp.cpp
libs/ggml/: .gitignore  CMakeLists.txt
libs/ggml/src/: CMakeLists.txt
libs/ggml/src/ggml-cuda/: CMakeLists.txt  common.cuh  mmvf.cu
libs/ggml/src/ggml-vulkan/: CMakeLists.txt
ofxGgmlBasicExample/src/: main.cpp  ofApp.cpp  ofApp.h
ofxGgmlChatExample/: README.md  addons.make
ofxGgmlChatExample/src/: main.cpp  ofApp.cpp  ofApp.h
ofxGgmlEmbeddingExample/src/: ofApp.cpp  ofApp.h
ofxGgmlExample/src/: ofApp.cpp
ofxGgmlFoundationExample/: Makefile  README.md
ofxGgmlFoundationExample/src/: ofApp.cpp  ofApp.h
ofxGgmlGuiExample/: README.md  addons.make  config.make  ofxGgmlGuiExample.sln  ofxGgmlGuiExample.vcxproj  ofxGgmlGuiExample.vcxproj.filters
ofxGgmlGuiExample/src/: Citations.cpp  DiffusionClip.cpp  EasyMode.cpp  GenerationWorkflow.cpp  MilkDrop.cpp  ServerManagement.cpp  SessionPersistence.cpp  SpeechTts.cpp  TextModes.cpp  VideoEssay.cpp  VisionVideo.cpp  main.cpp  ofApp.DiffusionClip.cpp  ofApp.ImageSearch.cpp  ofApp.VisionVideo.cpp  ofApp.cpp  ofApp.h
ofxGgmlNeuralExample/src/: main.cpp  ofApp.cpp  ofApp.h
ofxGgmlSimpleExample/src/: ofApp.cpp  ofApp.h
ofxGgmlTextExample/src/: ofApp.cpp  ofApp.h
ofxGgmlWebScrapingExample/: Makefile  README.md
ofxGgmlWebScrapingExample/src/: main.cpp  ofApp.cpp  ofApp.h
scripts/: apply-patches.sh  benchmark-addon.ps1  benchmark-addon.sh  benchmark-llama-cli.sh  build-chatllm.bat  build-chatllm.ps1  build-ggml.bat  build-ggml.sh  build-libxml2.bat  build-libxml2.ps1  build-llama-cli.sh  build-llama-server.bat  build-llama-server.ps1  build-sam3-cpp.bat  build-sam3-cpp.ps1  build-simple-example.bat  build-simple-example.ps1  build-whisper-server.bat  build-whisper-server.ps1  doctor.ps1  download-model.ps1  download-model.sh  download-piper-voice.bat  download-piper-voice.ps1  install-acestep.bat  install-acestep.ps1  install-mojo.bat  install-mojo.ps1  install-piper.bat  install-piper.ps1  install-sam3-cpp.bat  install-sam3-cpp.ps1  model-catalog.json  model-catalog.manifest.json  model-catalog.manifest.sig  mojo-crawl.py  ofxGgml-launch-utils.ps1  run-chat-example.ps1  run-clang-tidy.ps1  run-clang-tidy.sh  (+25 more)
scripts/dev/: apply-patches.sh  benchmark-llama-cli.sh  update-addon-config.bat  update-ggml-source.sh  update-model-checksums.sh  validate-model-catalog.py
src/: ofxGgml.h  ofxGgmlAssistants.h  ofxGgmlBasic.h  ofxGgmlChatAssistant.cpp  ofxGgmlChatAssistant.h  ofxGgmlCodeAssistant.cpp  ofxGgmlCodeAssistant.h  ofxGgmlCodeReview.h  ofxGgmlCompanionWorkflows.h  ofxGgmlCore.cpp  ofxGgmlCore.h  ofxGgmlCreative.h  ofxGgmlFoundation.h  ofxGgmlGraph.cpp  ofxGgmlGraph.h  ofxGgmlHelpers.h  ofxGgmlInference.cpp  ofxGgmlInference.h  ofxGgmlModalities.h  ofxGgmlModel.cpp  ofxGgmlModel.h  ofxGgmlProjectMemory.cpp  ofxGgmlProjectMemory.h  ofxGgmlResult.h  ofxGgmlScriptSource.cpp  ofxGgmlScriptSource.h  ofxGgmlTensor.cpp  ofxGgmlTensor.h  ofxGgmlText.h  ofxGgmlTextAssistant.cpp  ofxGgmlTextAssistant.h  ofxGgmlTypes.h  ofxGgmlVersion.h  ofxGgmlWorkflows.h  ofxGgmlWorkspaceAssistant.cpp  ofxGgmlWorkspaceAssistant.h
src/assistants/: ofxGgmlChatAssistant.cpp  ofxGgmlChatAssistant.h  ofxGgmlCodeAssistant.cpp  ofxGgmlCodeAssistant.h  ofxGgmlCodeReview.cpp  ofxGgmlCodeReview.h  ofxGgmlCodingAgent.cpp  ofxGgmlCodingAgent.h  ofxGgmlTextAssistant.cpp  ofxGgmlTextAssistant.h  ofxGgmlWorkspaceAssistant.cpp  ofxGgmlWorkspaceAssistant.h
src/bridges/: ofxGgmlHoloscanBridge.cpp  ofxGgmlHoloscanBridge.h  (+1 more)
tests/: CMakeLists.txt  EXTENDED_TEST_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  README.md  run-tests.sh  test_acestep_bridge.cpp  test_assistant_eval.cpp  test_benchmark.cpp  test_chat_assistant.cpp  test_citation_search.cpp  test_clip_inference.cpp  test_code_assistant.cpp  test_code_review.cpp  test_coding_agent.cpp  test_companion_project_memory.cpp  test_conversation_manager.cpp  test_core.cpp  test_diffusion_inference.cpp  test_easy_api.cpp  test_embedding.cpp  test_feature_synergies.cpp  test_foundation_api.cpp  test_graph.cpp  test_helpers.cpp  test_inference.cpp  test_integration.cpp  test_live_speech_transcriber.cpp  test_llama_cli_text.cpp  test_llama_server_text.cpp  test_long_video_planner.cpp  test_main.cpp  test_media_prompt_generator.cpp  test_milkdrop_generator.cpp  test_model.cpp  test_montage_planner.cpp  test_montage_preview_bridge.cpp  test_music_generator.cpp  test_project_memory.cpp  test_public_headers.cpp  test_rag_pipeline.cpp  (+18 more)
tests/stubs/: ofFileUtils.h  ofJson.h  ofMain.h  ofThread.h  ofThreadChannel.h
(+158 files in other folders)
